# monitor

./: README.md  pyproject.toml
monitor/: main.py  programs.py
monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
monitor/communication/: socket_client.py
