[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor"
version = "0.1"
description = "Monitor LakeShore"
authors = [
    { name = "Teddy Tortorici", email = "edward.tortorici@colorado.edu" }
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "pyside6",
    "pyvisa",
]
readme = "README.md"
license = { text = "GPL" }

[project.scripts]
lakeshore = "monitor.programs:lakeshore"

[tool.setuptools.packages.find]
include = ["monitor", "monitor.communication"]

[tool.setuptools.package-data]
"monitor" = ["gui/**/*"]